# maremma

./: .dockerignore  .gitignore  .semgrepignore  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  biome.jsonc  clippy.toml  config.json.example  deny.toml  docker-compose.yml  justfile  maremma.example.json  maremma.schema.json  mise.toml  package.json  pnpm-lock.yaml  tailwind.config.cjs  trivy.yaml
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: build_container.yml  clippy.yml  dependabot_auto_merge.yml  rust_test.yml
assets/: tailwind.css
docs/: book.toml
docs/src/: SUMMARY.md  database.md  kubernetes.md  objects.md  services.md  updating_the_db.md
docs/src/development/: testing.md
scripts/: build_plugins.sh  copy_linker_config.sh  fix_plugins_ioctl.sh  update_schema.sh
scripts/linker_config/: aarch64.toml
src/: check_loop.rs  cli.rs  config.rs  constants.rs  errors.rs  lib.rs  log.rs  main.rs  prelude.rs  serde.rs  shepherd.rs
src/actions/: mod.rs  pushover.rs
src/db/: actor.rs  migrator.rs  mod.rs  tests.rs
src/db/entities/: host.rs  host_group.rs  host_group_members.rs  mod.rs  service.rs  service_check.rs  service_check_history.rs  service_group_link.rs  service_v1.rs  session.rs  user.rs
src/db/entities/tests/: mod.rs  service_check.rs
src/db/migrations/: m20240802_create_host_group_members_table.rs  m20240802_create_host_group_table.rs  m20240802_create_host_table.rs  m20240802_create_service_check_table.rs  m20240802_create_service_table.rs  m20240807_create_service_check_hstory_table.rs  m20240810_create_user_table.rs  m20240822_create_session_table.rs  m20240825_create_service_group_link_table.rs  m20240825_drop_service_host_groups.rs  m20240827_add_fk_host_group_members.rs  m20240827_add_host_config_column.rs  m20241202_add_sch_index.rs  mod.rs
src/host/: fakehost.rs  kube.rs  mod.rs  ssh.rs
src/metrics/: mod.rs
src/serde/: cron.rs  mod.rs
src/services/: check.rs  cli.rs  http.rs  kubernetes.rs  mod.rs  oneshot.rs  ping.rs  prelude.rs  ssh.rs
src/services/tls/: mod.rs  tests.rs  verifier.rs
src/shepherd/: cert_reloader.rs  mod.rs  prelude.rs  service_check_cleaner.rs  service_check_history_cleaner.rs  session_cleaner.rs
src/tests/: mod.rs  testcontainers.rs  tls_utils.rs
src/web/: controller.rs  middleware.rs  mod.rs  oidc.rs  urls.rs
src/web/views/: csrf.rs  host.rs  host_group.rs  index.rs  metrics.rs  mod.rs  prelude.rs  profile.rs  service.rs  service_check.rs  tools.rs
static/css/: app.css  bootstrap-grid.css.br  bootstrap-grid.css.map.br  bootstrap-grid.min.css.br  bootstrap-grid.min.css.map.br  bootstrap-reboot.css.br  bootstrap-reboot.css.map.br  bootstrap-reboot.min.css.br  bootstrap-reboot.min.css.map.br  bootstrap-utilities.css.br  bootstrap-utilities.css.map.br  bootstrap-utilities.min.css.br  bootstrap-utilities.min.css.map.br  bootstrap.css.br  bootstrap.css.map.br  bootstrap.min.css.br  bootstrap.min.css.map.br  maremma.css
static/img/: maremma-icon-128.png.br  maremma-icon.png.br  maremma-icon.svg.br
static/js/: bootstrap.bundle.js.br  bootstrap.bundle.js.map.br  bootstrap.bundle.min.js.br  bootstrap.bundle.min.js.map.br  bootstrap.esm.js.br  bootstrap.esm.js.map.br  bootstrap.esm.min.js.br  bootstrap.esm.min.js.map.br  bootstrap.js.br  bootstrap.js.map.br  bootstrap.min.js.br  bootstrap.min.js.map.br  maremma.js
templates/: base_template.html  error.html  host.html  host_group.html  host_groups.html  hosts.html  index.html  profile.html  service.html  service_check.html  services.html  style.html  table_checks.html  tools.html
