[package]
name = "maremma"
version = "0.1.9"
edition = "2021"
license = "MIT"
default-run = "maremma"

[features]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[dependencies]
askama = { version = "0.15.4" }
async-trait = "0.1.89"
axum = { version = "0.8.8", features = [
  "http2",
  "macros",
  "tracing",
  "form",
  "query",
] }
# axum-oidc = "0.6.0"
axum-oidc = { git = "https://github.com/pfzetto/axum-oidc", branch = "pfzetto" } # until https://github.com/pfzetto/axum-oidc/pull/23 is merged
axum-server = { version = "0.8.0", features = ["rustls", "tls-rustls"] }
chrono = "0.4.43"
clap = { version = "4.5.60", features = ["derive", "env"] }
croner = "3.0.1"
env_logger = { version = "0.11.9", features = ["color", "default"] }
log = { version = "0.4.29", features = ["release_max_level_debug"] }
kube = { version = "3.0.1", features = ["config"] }
k8s-openapi = { version = "0.27.0", features = ["latest"] }
num_cpus = "1.17.0"
opentelemetry = "0.31.0"

opentelemetry-stdout = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = [
  "rt-tokio",
  "serde",
  "tokio",
  "url",
] }
prometheus = "0.14.0"
rand = "0.9.2"
reqwest = { version = "0.12.28", features = [
  "http2",
  "json",
  "rustls-tls",
], default-features = false }
rustls = { version = "0.23.36", features = ["zlib"] }
schemars = { version = "1.2.1", features = ["uuid1", "preserve_order"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha256 = "1.6.0"
sea-orm = { version = "1.1.19", features = [
  "runtime-tokio-rustls",
  "sqlx-sqlite",
  "with-chrono",
  "with-json",
  "with-uuid",
  "debug-print",
  "mock",
] }
sea-orm-migration = { version = "1.1.19", default-features = false, features = [
  "sqlx-sqlite",
  "with-chrono",
  "with-json",
  "with-uuid",
] }
sqlx = { version = "0.8.6", default-features = false }
ssh-rs = "0.5.0"
surge-ping = "0.8.4"
time = "0.3.47"
tokio = { version = "1.49.0", features = [
  "rt-multi-thread",
  "macros",
  "process",
  "tracing",
  "net",
] }
tokio-rustls = "0.26.4"
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tower-sessions = "0.14.0"
tracing = { version = "0.1.44", features = ["release_max_level_debug"] }
uuid = { version = "1.20.0", features = ["serde", "v4"] }
webpki-roots = "1.0.6"
x509-parser = "0.18.1"
webpki = "0.22.4"
rustls-webpki = { version = "0.103.9", features = ["aws-lc-rs"] }
futures = "0.3.32"
sea-query = "0.32.7"
which = { version = "8.0.0", features = ["tracing"] }
console-subscriber = "0.5.0"
askama_web = { version = "0.15.1", features = ["axum-0.8"] }

[dev-dependencies]
openidconnect = { version = "4.0.1", default-features = false }
openssl = { version = "0.10.75" }
tempfile = "3.25.0"
testcontainers = { version = "0.27.0" }
